# ds-sac

./: .gitignore  README.md  pyproject.toml
bench/: data.py  f_data.py  f_methods.py  methods.py  perf_check.py  plot_time_maa.py  plot_time_maa_f.py  report.py  report_f.py  run_bench.py  run_bench_f.py  setup_data.sh  setup_f_data.sh  time_maa.py  time_maa_f.py  tune_snn.py
docs/superpowers/plans/: 2026-07-23-dssac-homography.md
docs/superpowers/specs/: 2026-07-23-dssac-homography-design.md
dssac/: __init__.py  _fast.py  core.py  fundamental.py  homography.py
tests/: test_core.py  test_f_methods.py  test_fundamental.py  test_homography.py  test_methods.py
