[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dssac"
version = "0.1.0"
description = "DS-SAC: Density Search for Sample Consensus (homography), NumPy implementation"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.optional-dependencies]
fast = ["numba"]

[tool.setuptools]
packages = ["dssac"]
